force-app/main/default/objects/Quoteline__c/Quoteline__c.object-meta.xml
<CustomObject>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL-{0000}</displayFormat>
        <label>Quoteline ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>