force-app/main/default/objects/Quoteline__c/fields/AmountTaxBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingActual__c</fullName>
    <formula>ChargeQuantity__c *  TaxRateBuying__c *  BuyingListPriceActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Buying (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>