force-app/main/default/objects/Quoteline__c/fields/AmountTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingLocal__c</fullName>
    <formula>TaxRateBuying__c *  ChargeQuantity__c *  BuyingListPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Buying (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>