force-app/main/default/objects/Quoteline__c/fields/AmountTaxSellingActual__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxSellingActual__c</fullName>
    <formula>TaxRateSelling__c * ChargeQuantity__c *  SellingListPriceActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>