force-app/main/default/objects/Quoteline__c/fields/Block_flow__c.field-meta.xml
<CustomField>
    <fullName>Block_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block flow</label>
    <type>Checkbox</type>
</CustomField>