force-app/main/default/objects/Quoteline__c/fields/BuyingListPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>BuyingListPriceFCY__c</fullName>
    <label>Buying List Price (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>