force-app/main/default/objects/Quoteline__c/fields/CarrierAirlinerVendor__c.field-meta.xml
<CustomField>
    <fullName>CarrierAirlinerVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier/Airliner/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote lines</relationshipLabel>
    <relationshipName>Quote_lines</relationshipName>
    <type>Lookup</type>
</CustomField>