force-app/main/default/objects/Quoteline__c/fields/CarrierAirlinerVendorName__c.field-meta.xml
<CustomField>
    <fullName>CarrierAirlinerVendorName__c</fullName>
    <label>Carrier/Airliner/Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>