force-app/main/default/objects/Quoteline__c/fields/Combo_Product__c.field-meta.xml
<CustomField>
    <fullName>Combo_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo Product</label>
    <referenceTo>ComboProduct__c</referenceTo>
    <relationshipLabel>Quote lines</relationshipLabel>
    <relationshipName>Quote_lines</relationshipName>
    <type>Lookup</type>
</CustomField>