force-app/main/default/objects/Quoteline__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <label>Delivery Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>