force-app/main/default/objects/Quoteline__c/fields/FinalDestination__c.field-meta.xml
<CustomField>
    <fullName>FinalDestination__c</fullName>
    <label>Final Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>