force-app/main/default/objects/Quoteline__c/fields/FxRateID__c.field-meta.xml
<CustomField>
    <fullName>FxRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FxRate ID - Buying</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 3) AND (2 OR 4)</booleanFilter>
        <filterItems>
            <field>FxRate__c.Active1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FxRate__c.ExchangeCurrencyFrom1__c</field>
            <operation>equals</operation>
            <valueField>$Source.CurrencyBuying__c</valueField>
        </filterItems>
        <filterItems>
            <field>FxRate__c.Activeforupdate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.CurrencyBuying__c</field>
            <operation>equals</operation>
            <value>VND</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>Quote lines</relationshipLabel>
    <relationshipName>Quote_lines</relationshipName>
    <type>Lookup</type>
</CustomField>