force-app/main/default/objects/Quoteline__c/fields/Invoiceto__c.field-meta.xml
<CustomField>
    <fullName>Invoiceto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote lines (Account)</relationshipLabel>
    <relationshipName>Quote_lines1</relationshipName>
    <type>Lookup</type>
</CustomField>