force-app/main/default/objects/Quoteline__c/fields/LineItemNameEng__c.field-meta.xml
<CustomField>
    <fullName>LineItemNameEng__c</fullName>
    <label>Line Item Name (Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>