force-app/main/default/objects/Quoteline__c/fields/LineItemNameLocal__c.field-meta.xml
<CustomField>
    <fullName>LineItemNameLocal__c</fullName>
    <label>Line Item Name (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>