force-app/main/default/objects/Quoteline__c/fields/Place_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Receipt</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Quote lines (Place of Receipt)</relationshipLabel>
    <relationshipName>Quote_lines5</relationshipName>
    <type>Lookup</type>
</CustomField>