force-app/main/default/objects/Quoteline__c/fields/PODAOAName__c.field-meta.xml
<CustomField>
    <fullName>PODAOAName__c</fullName>
    <label>P.O.D(A.O.A) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>