force-app/main/default/objects/Quoteline__c/fields/POLAODName__c.field-meta.xml
<CustomField>
    <fullName>POLAODName__c</fullName>
    <label>P.O.L(A.O.D) Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>