force-app/main/default/objects/Quoteline__c/fields/PriceOptionID__c.field-meta.xml
<CustomField>
    <fullName>PriceOptionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Option ID</label>
    <referenceTo>Price_Option__c</referenceTo>
    <relationshipLabel>Quote lines</relationshipLabel>
    <relationshipName>Quote_lines</relationshipName>
    <type>Lookup</type>
</CustomField>