force-app/main/default/objects/Quoteline__c/fields/Print__c.field-meta.xml
<CustomField>
    <fullName>Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print</label>
    <type>Checkbox</type>
</CustomField>