force-app/main/default/objects/Quoteline__c/fields/PrintingSection__c.field-meta.xml
<CustomField>
    <fullName>PrintingSection__c</fullName>
    <label>Printing Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Section</fullName>
                <default>true</default>
                <label>1st Section</label>
            </value>
            <value>
                <fullName>2nd Section</fullName>
            </value>
            <value>
                <fullName>3rd Section</fullName>
            </value>
            <value>
                <fullName>4th Section</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>