force-app/main/default/objects/Quoteline__c/fields/Quote_route__c.field-meta.xml
<CustomField>
    <fullName>Quote_route__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote route</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote_route__c.Quote__c</field>
            <operation>equals</operation>
            <valueField>$Source.QuoteID__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Quote_route__c</referenceTo>
    <relationshipLabel>Quote lines</relationshipLabel>
    <relationshipName>Quote_lines</relationshipName>
    <type>Lookup</type>
</CustomField>