force-app/main/default/objects/Quoteline__c/fields/QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatus__c</fullName>
    <formula>TEXT (QuoteID__r.QuoteStatus__c)</formula>
    <label>Quote Status</label>
    <type>Text</type>
</CustomField>