force-app/main/default/objects/Quoteline__c/fields/ReferencePrice__c.field-meta.xml
<CustomField>
    <fullName>ReferencePrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Price</label>
    <referenceTo>ReferencePrice__c</referenceTo>
    <relationshipLabel>Quote lines</relationshipLabel>
    <relationshipName>Quote_lines</relationshipName>
    <type>Lookup</type>
</CustomField>