force-app/main/default/objects/Quoteline__c/fields/Route_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Name__c</fullName>
    <formula>Quote_route__r.Route_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Name</label>
    <type>Text</type>
</CustomField>