force-app/main/default/objects/Quoteline__c/fields/SellingDiscount__c.field-meta.xml
<CustomField>
    <fullName>SellingDiscount__c</fullName>
    <label>Selling Discount(%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>