force-app/main/default/objects/Quoteline__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID( ServiceID__r.Id ),  ServiceID__r.Name )</formula>
    <label>Service Name</label>
    <type>Text</type>
</CustomField>