force-app/main/default/objects/Quoteline__c/fields/ServiceID__c.field-meta.xml
<CustomField>
    <fullName>ServiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Quote lines</relationshipLabel>
    <relationshipName>Quote_lines</relationshipName>
    <type>Lookup</type>
</CustomField>