force-app/main/default/objects/Quoteline__c/fields/ServiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>ServiceSchedule__c</fullName>
    <label>Service Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>