force-app/main/default/objects/Quoteline__c/fields/SupplierVendor__c.field-meta.xml
<CustomField>
    <fullName>SupplierVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote lines (Supplier/Vendor)</relationshipLabel>
    <relationshipName>Quote_lines2</relationshipName>
    <type>Lookup</type>
</CustomField>