force-app/main/default/objects/Quoteline__c/fields/TaxRateSelling__c.field-meta.xml
<CustomField>
    <fullName>TaxRateSelling__c</fullName>
    <label>Tax Rate-Selling(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>