force-app/main/default/objects/Quoteline__c/fields/TextQuote__c.field-meta.xml
<CustomField>
    <fullName>TextQuote__c</fullName>
    <label>Text Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>